# team13

./: .flake8  .gitignore  .pre-commit-config.yaml.bak  LICENSE  README.md  __init__.py  requirements.txt  setup.cfg
.github/workflows/: main.yml
data/: eucl_distances_in_3_dims.out  expec.t  npopt_correlations_sorted.csv
doc/source/: IO.rst  conf.py  index.rst  mdp_analysis.rst  modules.rst  src.mdp_analysis.build.rst  src.mdp_analysis.rst  src.mdp_analysis.test.rst  src.rst
doc/source/_templates/old/: IO.rst
source/: conf.py  index.rst  mdp_analysis.rst  mdp_analysis.test.rst  modules.rst  notebook_team0.rst
src/: notebook_team0.ipynb  notebook_team0.py  notebook_unit1.ipynb  notebook_unit1.ipynb.bak
src/mdp_analysis/: IO.py  __init__.py  numerical.py  statistical.py  test_statistical.py
src/mdp_analysis/source/: conf.py  index.rst
src/mdp_analysis/test/: test_numerical.py  test_statistical.py
src/trying_tests/: test_triangle.py  triangle.py
