# replace with your username:
name = Team13
version = 1.0
author = Jing Sun
author_email = brian811117@gmail.com
description = simple data analysis package
long_description_content_type = text/markdown
url = https://github.com/olga-erokhina/team13
project_urls =
    Bug Tracker = https://github.com/olga-erokhina/team13a/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
